--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,84 @@
   --intro-discription-color: whitesmoke;
   --sponsored-color: #2e7c09;
   --sponsored-text-color: #2ff24e;
+  --title-text-color-1: rgb(53, 52, 38); 
+  --title-text-color-2: #666666;
+  --object-color: #e2e71a40;
+  --white: white;
+  --button-background-color: #948d49;
+
+  --nav-backgrond-color: #32C32F;
+  --font-size-small: 1.2rem;
+  --font-size-medium: 1.8rem;
+  --font-size-large: 2.4rem;
+  --font-size-extralarge: 4rem;
+  --nav-backgrond-color: #32c32f;
+  --font-size-small: 1.2rem;
+  --font-size-medium: 1.8rem;
+  --font-size-large: 2.4rem;
+  --border-color: #d8d6d6;
+  --label-background-color: #ffffff;
+  --btn-donate-background-color: #ecdb47;
+  --btn-donate: #534c11;
+  --btn-background-color: #bfb562;
+  --btn-hover: #e2e71a;
+  --btn-boder-color: #e2e71a;
+  --btn-color: #8e911180;
+  --money-input-background-color: #f2eddc;
+  --dropbtn-background-color: #3e8e41;
+  --dropdown-content-a: black;
+  --dropdown-content-background-color: #98e096;
+
+  --font-size-small: 1.2rem;
+  --font-size-medium: 1.8rem;
+  --font-size-large: 2.4rem;
+  --border-color: #d8d6d6;
+  --label-background-color: #ffffff;
+  --btn-donate-background-color: #ecdb47;
+  --btn-donate: #534c11;
+  --btn-background-color: #bfb562;
+  --btn-hover: #e2e71a;
+  --btn-boder-color: #e2e71a;
+  --btn-color: #8e911180;
+  --money-input-background-color: #f2eddc;
+  --dropbtn-background-color: #3e8e41;
+  --dropdown-content-a: black;
+  --dropdown-content-background-color: #98e096;
+
+  --home-background-color: #eceec2;
+  --nav-backgrond-color: #90d471;
+
+  --font-size-small: 1.2rem;
+  --font-size-medium: 1.8rem;
+  --font-size-large: 2.4rem;
+  --text-font-family: "jsMath-cmbx10-cmmi10", Helvetica;
+  --text-font-size: 30px;
+  --text-font-style: normal;
+  --text-font-weight: 400;
+  --text-letter-spacing: 0.075px;
+  --text-line-height: 45px;
+  --border-color: #d8d6d6;
+  --label-background-color: #ffffff;
+  --btn-donate-background-color: #ecdb47;
+  --btn-donate: #534c11;
+  --btn-background-color: #bfb562;
+  --btn-hover: #e2e71a;
+  --btn-boder-color: #e2e71a;
+  --btn-color: #8e911180;
+  --money-input-background-color: #f2eddc;
+  --dropbtn-background-color: #3e8e41;
+  --dropdown-content-a: black;
+  --dropdown-content-background-color: #98e096;
+  --login-form-color: white;
+  --nav-backgrond-color: #32c32f;
+  --text-color: #867b19;
+  --search-icon-color: #9fa312;
+  --donate-btn-color: rgba(0, 128, 0, 0.721);
+  --fundraise-btn-color: #cdd027;
+  --fundraise-target-color: #2ff24e;
+  --intro-discription-color: whitesmoke;
+  --sponsored-color: #2e7c09;
+  --sponsored-text-color: #2ff24e;
 
   --font-size-small: 1.2rem;
   --font-size-medium: 1.8rem;
