--- a/src/index.css
+++ b/src/index.css
@@ -26,13 +26,13 @@
   --intro-discription-color: whitesmoke;
   --sponsored-color: #2e7c09;
   --sponsored-text-color: #2ff24e;
-  --title-text-color-1: rgb(53, 52, 38); 
+  --title-text-color-1: rgb(53, 52, 38);
   --title-text-color-2: #666666;
   --object-color: #e2e71a40;
   --white: white;
   --button-background-color: #948d49;
 
-  --nav-backgrond-color: #32C32F;
+  --nav-backgrond-color: #32c32f;
   --font-size-small: 1.2rem;
   --font-size-medium: 1.8rem;
   --font-size-large: 2.4rem;
