--- a/src/pages/Response/Response.css
+++ b/src/pages/Response/Response.css
@@ -1,227 +1,222 @@
-body{
-    background-color: var(--home-background-color);
+body {
+  background-color: var(--home-background-color);
 }
 .send-respond {
-    background-color:var(--home-background-color);
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    width: 100%;
+  background-color: var(--home-background-color);
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  width: 100%;
 }
 
 .send-respond .div {
-    background-color:var(--home-background-color);
-    height: 64rem;
-    position: relative;
-    width: 90rem;
+  background-color: var(--home-background-color);
+  height: 64rem;
+  position: relative;
+  width: 90rem;
 }
 
 .send-respond .send-me-a-message {
-    color: var(--title-text-color-1);
-    font-family: "PlayfairDisplay-Bold";
-    font-size: xx-large;
-    font-style: normal;
-    font-weight: 700;
-    left: 3rem;
-    letter-spacing: 0;
-    line-height: 30rem;
-    position: absolute;
-    top: 5rem;
-    white-space: nowrap;
-    width: 24rem;
+  color: var(--title-text-color-1);
+  font-family: "PlayfairDisplay-Bold";
+  font-size: xx-large;
+  font-style: normal;
+  font-weight: 700;
+  left: 3rem;
+  letter-spacing: 0;
+  line-height: 30rem;
+  position: absolute;
+  top: 5rem;
+  white-space: nowrap;
+  width: 24rem;
 }
 
 .send-respond .address {
-    background-color: var(--object-color);
-    height: 26rem;
-    left: 54.4rem;
-    position: absolute;
-    top: 27rem;
-    width: 40rem;
+  background-color: var(--object-color);
+  height: 26rem;
+  left: 54.4rem;
+  position: absolute;
+  top: 27rem;
+  width: 40rem;
 }
 
 .send-respond .group {
-    height: 17rem;
-    left: 1.5rem;
-    position: relative;
-    top: 2.2rem;
-    width: 29rem;
+  height: 17rem;
+  left: 1.5rem;
+  position: relative;
+  top: 2.2rem;
+  width: 29rem;
 }
 
 .send-respond .text-wrapper {
-    color: var(--title-text-color-1);
-    font-family: "PlayfairDisplay-Bold";
-    font-size: xx-large;
-    font-style: normal;
-    font-weight: 700;
-    left: 0;
-    letter-spacing: 0;
-    line-height: 0rem;
-    position: absolute;
-    top: 0;
-    white-space: nowrap;
-    width: 10.25rem;
+  color: var(--title-text-color-1);
+  font-family: "PlayfairDisplay-Bold";
+  font-size: xx-large;
+  font-style: normal;
+  font-weight: 700;
+  left: 0;
+  letter-spacing: 0;
+  line-height: 0rem;
+  position: absolute;
+  top: 0;
+  white-space: nowrap;
+  width: 10.25rem;
 }
 
 .send-respond .quam-elementum {
-    color: var(--title-text-color-2);
-    font-family: 'Times New Roman', Times, serif;
-    font-size: medium;
-    font-weight: 400;
-    left: 0;
-    letter-spacing: 0;
-    line-height: 2rem;
-    position: absolute;
-    top: 3rem;
-    width: 40rem;
+  color: var(--title-text-color-2);
+  font-family: "Times New Roman", Times, serif;
+  font-size: medium;
+  font-weight: 400;
+  left: 0;
+  letter-spacing: 0;
+  line-height: 2rem;
+  position: absolute;
+  top: 3rem;
+  width: 40rem;
 }
 
 .send-respond .location {
-    color: var(--title-text-color-1);
-    font-family: "Montserrat-SemiBold", Helvetica;
-    font-size: var(--font-size-small);
-    font-weight: 400;
-    left: 0;
-    letter-spacing: 0;
-    line-height: 1.5rem;
-    position: absolute;
-    top: 14rem;
-    width: 25rem;
+  color: var(--title-text-color-1);
+  font-family: "Montserrat-SemiBold", Helvetica;
+  font-size: var(--font-size-small);
+  font-weight: 400;
+  left: 0;
+  letter-spacing: 0;
+  line-height: 1.5rem;
+  position: absolute;
+  top: 14rem;
+  width: 25rem;
 }
 
 .send-respond .span {
-    font-weight: 600;
+  font-weight: 600;
 }
 
 .send-respond .text-wrapper-2 {
-    font-family: "Montserrat-Regular", Helvetica;
-    font-size: var(--font-size-small);
+  font-family: "Montserrat-Regular", Helvetica;
+  font-size: var(--font-size-small);
 }
 
 .send-respond .phone {
-    color: var(--title-text-color-1);
-    font-family: "Montserrat-SemiBold", Helvetica;
-    font-size: var(--font-size-small);
-    font-weight: 400;
-    left: 0;
-    letter-spacing: 0;
-    line-height: 1.5rem;
-    position: absolute;
-    top: 18rem;
-    white-space: nowrap;
-    width: 13rem;
+  color: var(--title-text-color-1);
+  font-family: "Montserrat-SemiBold", Helvetica;
+  font-size: var(--font-size-small);
+  font-weight: 400;
+  left: 0;
+  letter-spacing: 0;
+  line-height: 1.5rem;
+  position: absolute;
+  top: 18rem;
+  white-space: nowrap;
+  width: 13rem;
 }
 
 .send-respond .email {
-    color: var(--title-text-color-1);
-    font-family: "Montserrat-SemiBold", Helvetica;
-    font-size:var(--font-size-small);
-    font-weight: 400;
-    left: 0;
-    letter-spacing: 0;
-    line-height: 24px;
-    position: absolute;
-    top: 20rem;
-    white-space: nowrap;
-    width: 20rem;
+  color: var(--title-text-color-1);
+  font-family: "Montserrat-SemiBold", Helvetica;
+  font-size: var(--font-size-small);
+  font-weight: 400;
+  left: 0;
+  letter-spacing: 0;
+  line-height: 24px;
+  position: absolute;
+  top: 20rem;
+  white-space: nowrap;
+  width: 20rem;
 }
 
 .send-respond .frame {
-    align-items: flex-start;
-    background-color:var(--object-color);
-    display: flex;
-    gap: 0.625rem
-    ;
-    height: 3rem;
-    left: 6.5rem;
-    padding: 0.75rem 1.5rem;
-    position: absolute;
-    top: 48rem;
-    width: 11rem;
+  align-items: flex-start;
+  background-color: var(--object-color);
+  display: flex;
+  gap: 0.625rem;
+  height: 3rem;
+  left: 6.5rem;
+  padding: 0.75rem 1.5rem;
+  position: absolute;
+  top: 48rem;
+  width: 11rem;
 }
 .SendRespond-container {
-    height: 25  rem;
-    display: block;
-    top: 25rem; 
-    width: 50rem;
-    position: absolute;
-
+  height: 25 rem;
+  display: block;
+  top: 25rem;
+  width: 50rem;
+  position: absolute;
 }
 
-
 .form-control {
-    border: 1px white;
-    color: var(--title-text-color-2);
-    background: var(--object-color);
-    font-size: medium;
+  border: 1px white;
+  color: var(--title-text-color-2);
+  background: var(--object-color);
+  font-size: medium;
 }
 
 .submit-btn {
-    background: var(--button-background-color);
-    color: var(--white);
-    text-align: center;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: var(---font-size-large);
-    font-style: normal;
-    font-weight: 500;
-    line-height: 100%;
-    display: block;
-    position: absolute;
-    top: 55rem;
-    height: 3rem;
-    border-color: var(--home-background-color);
+  background: var(--button-background-color);
+  color: var(--white);
+  text-align: center;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-size: var(---font-size-large);
+  font-style: normal;
+  font-weight: 500;
+  line-height: 100%;
+  display: block;
+  position: absolute;
+  top: 55rem;
+  height: 3rem;
+  border-color: var(--home-background-color);
+  left: 15rem;
 }
 
 .form-label {
-    margin: 0;
-    display: flex;
-    font-size: var(--font-size-medium);
-    font-family: "Montserrat-Regular";
-    
+  margin: 0;
+  display: flex;
+  font-size: var(--font-size-medium);
+  font-family: "Montserrat-Regular";
 }
 
 .get-in-touch {
-    color: #252a34;
-    font-family: "Montserrat-SemiBold";
-    font-size: var(--font-size-small);
-    font-weight: 300;
-    left: 0;
-    line-height: 28px;
-    position: absolute;
-    top: 13rem;
-    white-space: nowrap;
-    width: 9.5rem;
-    }
-    
+  color: #252a34;
+  font-family: "Montserrat-SemiBold";
+  font-size: var(--font-size-small);
+  font-weight: 300;
+  left: 0;
+  line-height: 28px;
+  position: absolute;
+  top: 13rem;
+  white-space: nowrap;
+  width: 9.5rem;
+}
+
 .line1 {
-        display: flex;
-        width: 100%;
-        margin-bottom: 1.5rem;
-        
-    }
+  display: flex;
+  width: 100%;
+  margin-bottom: 1.5rem;
+}
 .line2 {
-        display: flex;
-        width: 100%;
-        margin-bottom: 1.5rem;
-    }
- .input-box{
-        margin-right: 1rem;
-        width: 100%;
-     }
-    
-.line3{
-        margin-right: 1rem;
-     }
-     
-.form-control-message{
-        border: 1px;
-        color: var(--title-text-color-2);
-        background: var(--home-background-color);
-        height: 10rem;
-        width: 100%;
-        background:  var(--object-color);
-        font-family: "Montserrat-Regular";
-        font-size: var(--font-size-medium);
-        text-align: start;
-        
-     }
+  display: flex;
+  width: 100%;
+  margin-bottom: 1.5rem;
+}
+.input-box {
+  margin-right: 1rem;
+  width: 100%;
+}
+
+.line3 {
+  margin-right: 1rem;
+}
+
+.form-control-message {
+  border: 1px;
+  color: var(--title-text-color-2);
+  background: var(--home-background-color);
+  height: 10rem;
+  width: 100%;
+  background: var(--object-color);
+  font-family: "Montserrat-Regular";
+  font-size: var(--font-size-medium);
+  text-align: start;
+}
