feat: account and voluteer (undone)

--- a/src/index.css
+++ b/src/index.css
@@ -1,21 +1,50 @@
 :root {
   --home-background-color: #e5e6c7;
-  --nav-backgrond-color: #32C32F;
+  --nav-backgrond-color: #32c32f;
   --font-size-small: 1.2rem;
   --font-size-medium: 1.8rem;
   --font-size-large: 2.4rem;
   --border-color: #d8d6d6;
   --label-background-color: #ffffff;
-  --btn-donate-background-color: #ECDB47;
-  --btn-donate: #534C11;
+  --btn-donate-background-color: #ecdb47;
+  --btn-donate: #534c11;
   --btn-background-color: #bfb562;
   --btn-hover: #e2e71a;
-  --btn-boder-color: #e2e71a;;
+  --btn-boder-color: #e2e71a;
   --btn-color: #8e911180;
   --money-input-background-color: #f2eddc;
-  --dropbtn-background-color:#3e8e41;
+  --dropbtn-background-color: #3e8e41;
   --dropdown-content-a: black;
   --dropdown-content-background-color: #98e096;
+
+  --font-size-small: 1.2rem;
+  --font-size-medium: 1.8rem;
+  --font-size-large: 2.4rem;
+  --border-color: #d8d6d6;
+  --label-background-color: #ffffff;
+  --btn-donate-background-color: #ecdb47;
+  --btn-donate: #534c11;
+  --btn-background-color: #bfb562;
+  --btn-hover: #e2e71a;
+  --btn-boder-color: #e2e71a;
+  --btn-color: #8e911180;
+  --money-input-background-color: #f2eddc;
+  --dropbtn-background-color: #3e8e41;
+  --dropdown-content-a: black;
+  --dropdown-content-background-color: #98e096;
+
+  --home-background-color: #eceec2;
+  --nav-backgrond-color: #90d471;
+
+  --font-size-small: 1.2rem;
+  --font-size-medium: 1.8rem;
+  --font-size-large: 2.4rem;
+  --text-font-family: "jsMath-cmbx10-cmmi10", Helvetica;
+  --text-font-size: 30px;
+  --text-font-style: normal;
+  --text-font-weight: 400;
+  --text-letter-spacing: 0.075px;
+  --text-line-height: 45px;
 }
 
 * {
