--- a/src/index.css
+++ b/src/index.css
@@ -134,8 +134,8 @@
   --btn-donate-background-color: #ecdb47;
   --btn-donate: #534c11;
   --btn-background-color: #bfb562;
-  --btn-hover: #e2e71a;
-  --btn-boder-color: #e2e71a;
+  --btn-hover: #94980D;
+  --btn-boder-color: #e2e71a;;
   --btn-color: #8e911180;
   --money-input-background-color: #f2eddc;
   --dropbtn-background-color: #3e8e41;
