--- a/src/pages/Account/Account.css
+++ b/src/pages/Account/Account.css
@@ -3,9 +3,22 @@
 }
 .account {
   background-color: #e2e71a26;
-  height: 1024px;
+  height: 1080px;
   position: relative;
-  width: 1440px;
+  width: 1920px;
+}
+.reset-button {
+  background-color: #f44336;
+  color: white;
+  padding: 10px 20px;
+  font-size: 16px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.reset-button:hover {
+  background-color: #d32f2f;
 }
 
 .account .body {
@@ -42,7 +55,7 @@
   border-color: #dddddd;
   border-radius: 12px;
   height: 815px;
-  left: 881px;
+  left: 1200px;
   position: absolute;
   top: -68px;
   width: 333px;
