--- a/src/pages/Response/Response.css
+++ b/src/pages/Response/Response.css
@@ -12,8 +12,9 @@ body {
 .send-respond .div {
   background-color: var(--home-background-color);
   height: 64rem;
-  position: relative;
+  position: absolute;
   width: 90rem;
+  left: 15rem;
 }
 
 .send-respond .send-me-a-message {
@@ -22,7 +23,7 @@ body {
   font-size: xx-large;
   font-style: normal;
   font-weight: 700;
-  left: 3rem;
+  left: 14rem;
   letter-spacing: 0;
   line-height: 30rem;
   position: absolute;
@@ -34,10 +35,10 @@ body {
 .send-respond .address {
   background-color: var(--object-color);
   height: 26rem;
-  left: 54.4rem;
+  left: 55rem;
   position: absolute;
   top: 27rem;
-  width: 40rem;
+  width: 50rem;
 }
 
 .send-respond .group {
@@ -73,7 +74,7 @@ body {
   line-height: 2rem;
   position: absolute;
   top: 3rem;
-  width: 40rem;
+  width: 170%;
 }
 
 .send-respond .location {
@@ -132,7 +133,7 @@ body {
   display: flex;
   gap: 0.625rem;
   height: 3rem;
-  left: 6.5rem;
+  left: 0rem;
   padding: 0.75rem 1.5rem;
   position: absolute;
   top: 48rem;
@@ -140,9 +141,9 @@ body {
 }
 .SendRespond-container {
   height: 25 rem;
-  display: block;
-  top: 25rem;
-  width: 50rem;
+  top: 39rem;
+  width: 70rem;
+  margin-right: 35rem;
   position: absolute;
 }
 
@@ -155,20 +156,22 @@ body {
 
 .submit-btn {
   background: var(--button-background-color);
-  color: var(--white);
+  color: var(--border-color);
   text-align: center;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  font-size: var(---font-size-large);
+  font-size: var(--font-size-medium);
   font-style: normal;
-  font-weight: 500;
-  line-height: 100%;
+  font-weight: 400;
+  line-height: 150%;
   display: block;
   position: absolute;
   top: 55rem;
   height: 3rem;
+  width: 15rem;
   border-color: var(--home-background-color);
   left: 15rem;
 }
+
 .form-label {
   margin: 0;
   display: flex;
@@ -181,9 +184,9 @@ body {
   font-family: "Montserrat-SemiBold";
   font-size: var(--font-size-small);
   font-weight: 300;
-  left: 0;
+  left: 10rem;
   line-height: 28px;
-  position: absolute;
+  position: relative;
   top: 13rem;
   white-space: nowrap;
   width: 9.5rem;
